Zope Changes

  This file contains change information for the current Zope release.
  Change information for previous versions of Zope can be found in the
  file HISTORY.txt.

  For information on future releases, see ROADMAP.txt.

  Some future release (Zope X3 3.1.0)

    New features

      - Added lazy properties. (See zope/cachedescriptors/README.txt)

      - Added new `getNextUtility()`, `queryNextUtility()`, and
        `testingNextUtility()` functions to make it easier to find and test
        for utilities in higher-up sites. These mimic their service-based
        equivalents.

      - Added an API for declaring interfaces adapted by classes

      - Added a simplified Python API for registering global utilities
        and adapters.

      - Added initial indexing and cataloging support

      - Added an integer-id facility for assigning integer identifiers
        to objects.  In Zope 2, this functionality is internal to
        catalogs. By separating id management out, multiple catalogs
        and indexing structures can share the same id scheme, allowing
        cross-catalog joins and other sorts of aggregated analyses.

      - Added `getInfo(generation)` method to `zope.app.generations`'s
        `ISchemaManager`. It will return some information about the evolver
        that brings the database to the specified generation. This way we can
        document the various evolutions. The standard `ISchemaManager`
        implementation uses the `evolve()` function's docstring to determine
        the information string. Added a view showing the information strings
        via the Web UI.

      - Implemented local permission. This is not really that interesting
        right now, since we do not support TTW development yet, but it will
        become important somewhen.

      - Page templates now allow metal:define-macro and
        metal:use-macro in the same tag.  This allows a macro to